# jimi_http

./: .gitignore  CMakeLists.txt  README.md  jimi_http_vc2015.sln
C#/DictionaryTest/: Program.cs
C#/DictionaryTest/DictionayLib/: DictionaryEx.cs  HashHelpers.cs
clang/: CMakeLists.txt  cmd.txt
projects/vc2015/http_parser_test/: http_parser_test.vcxproj  http_parser_test.vcxproj.filters
projects/vc2015/http_parser_unittest/: http_parser_unittest.vcxproj  http_parser_unittest.vcxproj.filters
projects/vc2015/jimi_http_serv/: jimi_http_serv.vcxproj  jimi_http_serv.vcxproj.filters
projects/vc2015/libjimi_http/: libjimi_http.vcxproj  libjimi_http.vcxproj.filters
src/main/jimi/: Hash.h  HttpCommon.h  HttpParser.h  HttpRequest.h  HttpResponse.h  InputStream.h  Slice.h  StringRef.h  StringRefList.h  crc32.h  crc32c.h  http_all.h
src/main/jimi/basic/: inttypes.h  stddef.h  stdint.h
src/main/jimi/http/: Common.h  FastParser.h  Parser.h  ParserOld.h  Request.h  Response.h  Version.h
src/main/jimi/jstd/: char_traits.h  dictionary.h  dictionary_ex.h  dictionary_traits.h  fixed_freelist.h  hash_helper.h  hash_map.h  hash_map_ex.h  hash_table.h  nothrow_deleter.h  nothrow_new.h  string_iterator.h  string_utils.h
src/main/jimi/support/: Power2.h  SSEHelper.h  bitscan_forward.h  bitscan_reverse.h  popcnt.h
src/main/jimi_http/: HttpCommon.h  HttpParser.cpp  HttpParser.h  HttpParserOld.h  HttpRequest.h  HttpResponse.h  InputStream.h  StringRef.h  StringRefList.h  http_all.h
src/main/jimi_http_serv/: atomic_padding.hpp  main.cpp  padding_atomic.hpp
src/test/http_parser_test/: HashTableBenchmark.h  HttpRouter.h  HttpRouter2.h  main.cpp  stop_watch.h
src/test/http_parser_test/LRUCache/: LRUCache.h  LRUCache_v3.h
src/unittest/http_parser_unittest/: main.cpp
